# Bitcoin-AI-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  main_api.py  project_structure.txt  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 9fce9952714f_initial_schema_with_all_tables.py
bitcoin_agent/: __init__.py  agent.py  config.py  crypto.py
bitcoin_agent/api/: __init__.py  app.py
bitcoin_agent/db/: base.py  session.py
bitcoin_agent/models/: __init__.py  conversation.py  document.py  message.py  user.py
bitcoin_agent/services/: auth_service.py  conversation_service.py  redis_service.py  user_service.py  vector_service.py
knowledge_base/bitcoin_docs/: bitcoin_whitepaper.txt
knowledge_base/scripts/: ingest_docs.py
